# chatra

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  NOTICE  README.ja.md  README.md  SECURITY.md  main.cpp
.github/workflows/: codeql-analysis.yml
chatra/: chatra.h  chatra_debugger.h  chatra_utils.h
chatra_core/: CMakeLists.txt  CharacterClass.h  Classes.cpp  Classes.h  EmbeddedClasses.cpp  EmbeddedFunctions.cpp  Internal.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  MemoryManagement.cpp  MemoryManagement.h  Miscellaneous.cpp  NativeCall.cpp  Parser.cpp  Parser.h  Runtime.cpp  Runtime.h  Serialize.cpp  Serialize.h  StringTable.cpp  StringTable.h  TemporaryObject.cpp  Thread.cpp  Timer.cpp  Timer.h
chatra_emb/: CMakeLists.txt  EmbInternal.cpp  EmbInternal.h  EmbeddedLibraries.cpp  chrono.cha  containers.cha  containersNative.cpp  containersNative.h  enum.cha  enumNative.cpp  format.cha  formatNative.cpp  io.cha  ioNative.cpp  ioNativeStandardFile.cpp  math.cha  mathNative.cpp  random.cha  randomNative.cpp  reflection.cha  reflectionNative.cpp  regex.cha  regexNative.cpp  regexNative_srell.h  sys.cha  sysNative.cpp
editline/: CMakeLists.txt  Makefile  chartype.h  config.h  search.c  sys.h  vis.c  wcsdup.c
modules/: FindReadline.cmake
modules/dummy_readline/include/readline/: history.h  readline.h
samples_in_docs/: readme_first_sample.cha  tour_control_flow.cha  tour_control_flow_for.cha  tour_control_flow_switch.cha  tour_structure_block.cha  tour_structure_block_comment.cha  tour_structure_line_comment.cha  tour_structure_lines.cha  tour_structure_nested_blocks.cha  tour_structure_progressive_parser.cha  tour_structure_wrapped_lines.cha  tour_value_string.cha  tour_values.cha  tour_variable_and_scope.cha
test_scripts/: CMakeLists.txt  Test.cpp  TestNative.cpp  classes_duplicated_name.cha  classes_duplicated_variables.cha  concurrent.cha  control_flow.cha  emb_containers.cha  emb_format.cha  emb_io.cha  emb_io_test1.txt  emb_io_test3.txt  emb_io_test4.txt  emb_math.cha  emb_random.cha  emb_regex.cha  embedded_containers.cha  exceptions.cha  function_call.cha  lex_and_operators.cha  memory_management.cha  native_call.cha  reflection.cha  scope_and_visibility.cha  special_operators.cha  special_operators_ext_classes1.cha  special_operators_ext_classes2.cha  special_operators_ext_container.cha  syntax_sugar.cha  test_native.cha  unhandled_exception_error.cha  unhandled_exception_throw.cha
